changed the media directory, didn't help much...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 webdav:
   image: fabianwe/webdav
   volumes:
-    - ./media:/media
+    - ./media:/webdav_media
     - ./webdav_conf:/webdav
   ports:
     - 80:80
