--- a/webdav.conf
+++ b/webdav.conf
@@ -20,6 +20,6 @@ server {
         auth_basic "Restricted";
     	  auth_basic_user_file /webdav/htpasswd;
 
-        root /media/;
+        root /webdav_media/;
     }
 }
